force-app/main/default/objects/Medication_Statement__c/Medication_Statement__c.object-meta.xml
<CustomObject>
<description>Medication history and current prescriptions.</description>
<label>Medication Statement</label>
<nameField>
<displayFormat>MS-{000000}</displayFormat>
<label>Medication Statement Name</label>
<type>AutoNumber</type>
</nameField>
<pluralLabel>Medication Statements</pluralLabel>
<sharingModel>Private</sharingModel>
</CustomObject>