force-app/main/default/objects/Medication_Statement__c/fields/Dosage__c.field-meta.xml
<CustomField>
<fullName>Dosage__c</fullName>
<label>Dosage</label>
<type>Text</type>
<length>80</length>
</CustomField>