force-app/main/default/objects/Medication_Statement__c/fields/Drug_As_Written__c.field-meta.xml
<CustomField>
    <fullName>Drug_As_Written__c</fullName>
    <label>Drug (as written)</label>
    <length>255</length>
    <type>Text</type>
    <required>true</required>
</CustomField>