force-app/main/default/objects/Medication_Statement__c/fields/Drug_Name__c.field-meta.xml
<CustomField>
    <fullName>Drug_Name__c</fullName>
    <label>Drug Name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>