force-app/main/default/objects/Medication_Statement__c/fields/Extraction_Result__c.field-meta.xml
<CustomField>
    <fullName>Extraction_Result__c</fullName>
    <label>Extraction</label>
    <referenceTo>Extraction_Result__c</referenceTo>
    <relationshipLabel>Extraction Records</relationshipLabel>
    <relationshipName>Extraction_Result</relationshipName>
    <type>Lookup</type>
</CustomField>