force-app/main/default/objects/Medication_Statement__c/fields/Frequency__c.field-meta.xml
<CustomField>
<fullName>Frequency__c</fullName>
<label>Frequency</label>
<type>Text</type>
<length>80</length>
</CustomField>