force-app/main/default/objects/Medication_Statement__c/fields/Prescribed_On__c.field-meta.xml
<CustomField>
    <fullName>Prescribed_On__c</fullName>
    <label>Prescribed On</label>
    <type>Date</type>
</CustomField>