force-app/main/default/objects/Medication_Statement__c/fields/Source__c.field-meta.xml
<CustomField>
<fullName>Source__c</fullName>
<label>Source</label>
<type>Picklist</type>
<required>true</required>
<valueSet>
<valueSetDefinition>
<value>
<fullName>Prescription extraction</fullName>
</value>
<value>
<fullName>Manual entry</fullName>
<default>true</default>
<label>Manual entry</label>
</value>
<value>
<fullName>Care plan</fullName>
</value>
</valueSetDefinition>
</valueSet>
</CustomField>