force-app/main/default/objects/Medication_Statement__c/fields/Status__c.field-meta.xml
<CustomField>
<fullName>Status__c</fullName>
<label>Status</label>
<type>Picklist</type>
<required>true</required>
<valueSet>
<valueSetDefinition>
<value>
<fullName>Current</fullName>
<default>true</default>
<label>Current</label>
</value>
<value>
<fullName>Past</fullName>
</value>
<value>
<fullName>Discontinued</fullName>
</value>
</valueSetDefinition>
</valueSet>
</CustomField>