force-app/main/default/objects/Medication_Statement__c/fields/Strength__c.field-meta.xml
<CustomField>
    <fullName>Strength__c</fullName>
    <label>Strength</label>
    <length>50</length>
    <type>Text</type>
</CustomField>