force-app/main/default/objects/Medication_Statement__c/fields/Verified_At__c.field-meta.xml
<CustomField>
    <fullName>Verified_At__c</fullName>
    <label>At</label>
    <type>DateTime</type>
</CustomField>