force-app/main/default/objects/Medication_Statement__c/fields/Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Verified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verified By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Verified By Records</relationshipLabel>
    <relationshipName>MedicationStatementVerifiedBy</relationshipName>
    <type>Lookup</type>
</CustomField>