force-app/main/default/objects/Medication_Statement__c/MS_Verified_Before_Current.validationRule-meta.xml
<ValidationRule>
<fullName>MS_Verified_Before_Current</fullName>
<active>true</active>
<errorConditionFormula>ISPICKVAL(Status__c,'Current') &amp;&amp; ISPICKVAL(Source__c,'Prescription extraction') &amp;&amp; ISBLANK(Verified_By__c)</errorConditionFormula>
<errorMessage>Extracted medicines must be verified before they are marked Current.</errorMessage>
</ValidationRule>